--- a/textchange/templates/textchange/contactwish.html
+++ b/textchange/templates/textchange/contactwish.html
@@ -19,7 +19,7 @@
       <div class="col-lg-6">
         <h3>Contact Info</h3>
           <p><strong>User: </strong>{{ wishlist.user.username }}</p>
-          <p>Button to contact</p>
+          <p>Test: {{ wishlist.user }}</p>
       </div>
     </div> <!-- /container -->
 
