Add few more Q and A

--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -58,15 +58,18 @@
         <li type="circle"><strong>How do I add my textbooks to the application?</strong></li></br>
         <li type="none">First you have to search for your textbook in the searchbox at the home page.
           Once you select your textbook click "Add to Wishlist" if you are trying to buy that textbook
-          and "Add a Posting" and fill out the following form if you are trying to sell that textbook.</li></br>
+          and "Add a Posting" and fill out the following form if you are trying to sell that textbook.
+          Now other users will see that you are buying or selling that textbook.</li></br>
         <li type="circle"><strong>What is the advantage to adding postings and wishes?</strong></li></br>
         <li type="none">Adding postings or wishes allows other users searching for that textbook to find you,
           that way you don't have to constantly search for buyers and sellers.
           You can let the buyers and sellers find you.</li></br>
-        <li type="circle"><strong>How to bring back delete confirmation?</strong></li></br>
+        <li type="circle"><strong>How do you bring back the delete confirmation box?</strong></li></br>
         <li type="none"></li></br>
         <li type="circle"><strong>Why are multiple results showing item for the same item?</strong></li></br>
-        <li type="none"></li></br>
+        <li type="none">Multiple results show up for each textbook if the textbook is offered for more than one class.
+        However, no matter what textbook you click on you will see all the postings and wishes for that textbook between
+        all of the classes.</li></br>
         <li type="circle"><strong>why facebook isnt working</strong></li></br>
         <li type="none"></li></br>
       </ul>
