--- a/textchange/templates/textchange/contactwish.html
+++ b/textchange/templates/textchange/contactwish.html
@@ -18,8 +18,8 @@
       </div>
       <div class="col-lg-6">
         <h3>Contact Info</h3>
-          <p><strong>User: </strong>{{ wishlist.user.username }}</p>
-          <p>Test: {{ wishlist.user }}</p>
+          <p><strong>User: </strong>{{ wishlist.user.first_name }}</p>
+          <p><a href="http://facebook.com/{{ social.uid }}">Visit their Facebook and send them a message!</a> </p>
       </div>
     </div> <!-- /container -->
 
