Added more info on about

--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -34,7 +34,7 @@
       <p>My name is Joe and I am a 3rd year software engineering student studying at the University of Victoria. Texchange was designed
         to make exchanging textbooks easier at the University of Victoria. If you have any concerns or recommendations about the application,
         you would just like to contact the developer, or you have other application ideas that you want developed for students at UVic
-        please feel welcome to send a message with the form below.
+        please feel welcome to send a message with the form below. If you would like to stay anonymous simply enter "A@B.C" into the e-mail field.
       </p>
       <div class="feedback" style="margin-left: auto; margin-right: auto; display: block;">
       <form method="post">
