--- a/textchange/templates/textchange/addposting.html
+++ b/textchange/templates/textchange/addposting.html
@@ -12,7 +12,7 @@
         <p>{{ text.author }} &nbsp; {{ text.isbn }}</p>
         <form action="{% url 'textchange:addposting' uisbn=text.isbn %}" method="POST" enctype="multipart/form-data"> {% csrf_token %}
           {% for field in form %}
-            {{ field.errors }}
+            <span style="color: red;">{{ field.errors }}</span>
             {{ field.label_tag }}
             {{ field }}
             </br>
