--- a/textchange/templates/textchange/footer.html
+++ b/textchange/templates/textchange/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-  <p>&copy; Brought to you by Joe Czepil at the University of Victoria 2015</p>
+  <p>&copy; Brought to you by: Joe Czepil at the University of Victoria 2015</p>
 </footer>
