--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Texchange organizes textbooks required for courses offered at the University of Victoria (UVic).
   It allows users to search for desired textbooks and contact their fellow peers to trade.">
   <meta name="author" content="Joe Czepil">
+  <meta name="format-detection" content="telephone=no" />
   <link rel="icon" href="../../favicon.ico">
 
   <title>UVic Texchange Exchange Textbooks at University of Victoria</title>
