--- a/textchange/static/textchange/mycss.css
+++ b/textchange/static/textchange/mycss.css
@@ -4,8 +4,12 @@
   color: green;
 }
 
+.red {
+  color: red;
+}
+
 .feedback {
-  width: 510px;
+  width: 360px;
 }
 
 .homebutton {
@@ -55,11 +59,11 @@
 }
 
 #id_email {
-  width: 180px;
+  width: 124px;
 }
 
 #id_subject {
-  width: 180px;
+  width: 124px;
 }
 
 #id_condition {
@@ -82,17 +86,17 @@
 }
 
 .feedbackcontent {
-  width: 470px;
-  height: 160px;
+  width: 360px;
+  height: 120px;
 }
 
 .option {
-  width: 300px;
+  width: 100%;
 }
 
 #notloggedwish {
   height: 45px;
-  width: 300px;
+  width: 100%;
   border-radius: 6px;
   background-color: #C5C5C5;
   border: 1px solid #C5C5C5;
@@ -102,13 +106,13 @@
 .good {
   background-color: #52B452;
   height: 50px;
-  width: 170px;
+  width: 150px;
 }
 
 .bad {
   background-color: #BF322E;
   height: 50px;
-  width: 170px;
+  width: 150px;
 }
 
 .delete {
@@ -218,6 +222,18 @@
 #help {
   background-color: #C5C5C5;
   z-index: 999;
+}
+
+.width20p {
+  width: 20%;
+}
+
+.width71p {
+  width: 71%;
+}
+
+.width9p {
+  width: 9%;
 }
 
 .width160 {
