--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -53,8 +53,18 @@
         <span>&nbsp;&nbsp;&nbsp;</span>
         <div class="fb-share-button" data-href="http://www.texchange.ca" data-layout="button_count"></div><span> Share the website</span>
         <span>&nbsp;&nbsp;&nbsp;</span>
-        <div class="fb-like" data-href="https://www.facebook.com/UvicTexchange" data-width="180" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div><span> Like and share the Facebook page</span>
-      </br></br><p>Honourable mentions go out to Konrad Schultz, Daniel Bolink, and Curtis St. Pierre for helping me on some of the problems I ran into.</p>
+        <div class="fb-like" data-href="https://www.facebook.com/UvicTexchange" data-width="180" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+        <span> Like and share the Facebook page</span>
+
+        <p></br>If you would like to support the developer, donate using the button below.</p>
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+          <input type="hidden" name="cmd" value="_s-xclick">
+          <input type="hidden" name="hosted_button_id" value="7LSB63BS4RL62">
+          <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+          <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+          </form>
+
+      </br><p>Honourable mentions go out to Konrad Schultz, Daniel Bolink, and Curtis St. Pierre for helping me on some of the problems I ran into.</p>
       {% include "textchange/footer.html" %}
     </div> <!-- /container -->
 
