--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -36,5 +36,5 @@
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="UVic Texchange" />
   <meta property="og:description"   content="Making textbook exchange at UVic easy!" />
-  <meta property="og:image"         content="../../static/textchange/linkpic.jpg" />
+  <meta property="og:image"         content="../../static/textchange/Sharepic.png" />
 </head>
