--- a/textchange/templates/textchange/contactpost.html
+++ b/textchange/templates/textchange/contactpost.html
@@ -17,6 +17,7 @@
           <p><strong>Class: </strong>{{ posting.textbook.class_name }}</p>
           <p><strong>ISBN: </strong>{{ posting.textbook.isbn }}</p>
           <p><strong>Author: </strong>{{ posting.textbook.author }}</p>
+          <p><strong>Additional Comments: </strong>{{ posting.comments }}</p>
         <h3>Contact Info</h3>
           <p><strong>User: </strong>{{ posting.user.first_name }}</p>
           <p><a href="http://facebook.com/{{ social.uid }}">Visit their Facebook and send them a message!</a> </p>
