Affiliate link adjust

--- a/textchange/templates/textchange/textbook.html
+++ b/textchange/templates/textchange/textbook.html
@@ -60,12 +60,12 @@
             </td>
           </tr>
         </table>
-        <p>No one selling? Search <strong><a href="http://affiliates.abebooks.com/c/177315/77416/2029">AbeBooks</a></strong> for your textbook.</p>
       </div>
       </div>
       <!-- JUMBOTRON END -->
 
       <div class="row marketing">
+        <p class="centertext">No one selling? Search <strong><a href="http://affiliates.abebooks.com/c/177315/77416/2029">AbeBooks</a></strong> for your textbook.</p>
         <div class="col-lg-6">
           <h3>Possible Buyers</h3>
           <table class="resultstable">
