--- a/textchange/templates/textchange/textbook.html
+++ b/textchange/templates/textchange/textbook.html
@@ -64,8 +64,8 @@
       </div>
       <!-- JUMBOTRON END -->
 
-      <div class="row marketing" style="margin-top: 15px;">
-        <p class="centertext">No one selling? Search <strong><a href="http://affiliates.abebooks.com/c/177315/77416/2029">AbeBooks</a></strong> for your textbook.</p>
+      <div class="row marketing abebooks">
+        <p class="centertext">No one selling? Try searching <strong><a href="http://affiliates.abebooks.com/c/177315/77416/2029">AbeBooks</a></strong> for your textbook.</p>
         <div class="col-lg-6">
           <h3>Possible Buyers</h3>
           <table class="resultstable">
