--- a/textchange/templates/textchange/textbook.html
+++ b/textchange/templates/textchange/textbook.html
@@ -72,7 +72,7 @@
             {% for wishes in wishlists %}
             <tr class="bordertop">
               <td class="width270"><a class="blacklink padtopbot15" href = "{% url 'textchange:contactwish' uuser=wishes.user.pk uisbn=text.isbn %}">{{wishes.user.first_name}}</a></td>
-              <td><a class="padtopbot8" href="{% url 'textchange:contactwish' uuser=wishes.user.pk uisbn=text.isbn %}"><img src="../../static/textchange/nextarrow.png" class="nextbutton"></a></td>
+              <td><a class="padtopbot8" href="{% url 'textchange:contactwish' uuser=wishes.user.pk uisbn=text.isbn %}"><img src="https://texchangedb.s3.amazonaws.com/textchange/nextarrow.png" class="nextbutton"></a></td>
             </tr>
             {% endfor %}
             {% if not wishlists %}
@@ -89,7 +89,7 @@
               <td class="width85"><a class="blacklink padtopbot15" href = "{% url 'textchange:contactpost' uuser=posts.user.pk uisbn=text.isbn %}">{{posts.condition}}</a></td>
               <td class="width75"><a class="blacklink padtopbot15" href = "{% url 'textchange:contactpost' uuser=posts.user.pk uisbn=text.isbn %}">${{posts.price}}</a></td>
               <td class="width110"><a class="blacklink padtopbot15" href = "{% url 'textchange:contactpost' uuser=posts.user.pk uisbn=text.isbn %}">{{posts.user.first_name }}</a></td>
-              <td><a class="padtopbot8" href="{% url 'textchange:contactpost' uuser=posts.user.pk uisbn=text.isbn %}"><img src="../../static/textchange/nextarrow.png" class="nextbutton"></a></td>
+              <td><a class="padtopbot8" href="{% url 'textchange:contactpost' uuser=posts.user.pk uisbn=text.isbn %}"><img src="https://texchangedb.s3.amazonaws.com/textchange/nextarrow.png" class="nextbutton"></a></td>
             </tr>
             {% endfor %}
             {% if not listings %}
