Link to schedule, help adjustment

--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -64,14 +64,13 @@
         <li type="none">Adding postings or wishes allows other users searching for that textbook to find you,
           that way you don't have to constantly search for buyers and sellers.
           You can let the buyers and sellers find you.</li></br>
-        <li type="circle"><strong>How do you bring back the delete confirmation box?</strong></li></br>
-        <li type="none"></li></br>
         <li type="circle"><strong>Why are multiple results showing item for the same item?</strong></li></br>
-        <li type="none">Multiple results show up for each textbook if the textbook is offered for more than one class.
+        <li type="none">Multiple results show up for a textbook if the textbook is offered for more than one class.
         However, no matter what textbook you click on you will see all the postings and wishes for that textbook between
         all of the classes.</li></br>
-        <li type="circle"><strong>why facebook isnt working</strong></li></br>
-        <li type="none"></li></br>
+        <li type="circle"><strong>Why can't I message people on Facebook?</strong></li></br>
+        <li type="none">If you do not have the option to message someone on Facebook then their security settings may be too strict.
+        Make sure to set your settings so that "Anyone" can message you that people are not running into the same problem when messaging you.</li></br>
       </ul>
       <a href="#toc">Back to Top</a>
 
