Add default image in view for post

--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -64,9 +64,9 @@
           <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
           </form>
 
-      </br><p>Check out this free <a href="http://schedulecourses.com/">Class Scheduling Application</a> for UVic students built by a UVic graduate.</p>
+      </br><p>Check out this FREE <a href="http://schedulecourses.com/">Class Scheduling Application</a> for UVic students built by a UVic graduate.</p>
 
-      </br><p>Honourable mentions go out to Konrad Schultz, Daniel Bolink, and Curtis St. Pierre for helping me on some of the problems I ran into.</p>
+      <p>Honourable mentions go out to Konrad Schultz, Daniel Bolink, and Curtis St. Pierre for helping me on some of the problems I ran into.</p>
       {% include "textchange/footer.html" %}
     </div> <!-- /container -->
 
