--- a/textchange/templates/textchange/contactpost.html
+++ b/textchange/templates/textchange/contactpost.html
@@ -24,7 +24,7 @@
       </div>
 
       <div class="col-lg-6">
-          {% if posting.image.url != "../../static/textchange/nophoto.png" %}
+          {% if posting.image %}
           <img src="{{ posting.image.url }}" id="postimage">
           {% else %}
           <img src="https://texchangedb.s3.amazonaws.com/textchange/nophoto.png" id="postimage">
