--- a/textchange/templates/textchange/contactwish.html
+++ b/textchange/templates/textchange/contactwish.html
@@ -25,7 +25,6 @@
 
     {% include "textchange/footer.html" %}
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </div>
   </body>
 </html>
