--- a/textchange/templates/textchange/addposting.html
+++ b/textchange/templates/textchange/addposting.html
@@ -9,7 +9,8 @@
       {% include "textchange/navbar.html" %}
       <div class="addpostform centertext">
         <p>{{ text.textbook_name }}</p>
-        <p>{{ text.author }} &nbsp; {{ text.isbn }}</p>
+        <p>{{ text.author }}</p>
+        <p>{{ text.isbn }}</p>
         <form action="{% url 'textchange:addposting' uisbn=text.isbn %}" method="POST" enctype="multipart/form-data"> {% csrf_token %}
           {% for field in form %}
             <span style="color: red;">{{ field.errors }}</span>
