Change course scheduler ad

--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -49,6 +49,9 @@
     </div>
 
     </br>
+
+    <p>Check out this FREE <a href="http://schedulecourses.com/">Class Scheduling Application</a> for UVic students built by a UVic graduate.</p>
+
       <p>Like the Facebook page for application updates and share the website with your friends to help grow the community!</p>
         <span>&nbsp;&nbsp;&nbsp;</span>
         <div class="fb-share-button" data-href="http://www.texchange.ca" data-layout="button_count"></div><span> Share the website</span>
@@ -64,9 +67,7 @@
           <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
           </form>
 
-      </br><p>Check out this FREE <a href="http://schedulecourses.com/">Class Scheduling Application</a> for UVic students built by a UVic graduate.</p>
-
-      <p>Honourable mentions go out to Konrad Schultz, Daniel Bolink, and Curtis St. Pierre for helping me on some of the problems I ran into.</p>
+    </br><p>Honourable mentions go out to Konrad Schultz, Daniel Bolink, and Curtis St. Pierre for helping me on some of the problems I ran into.</p>
 
       {% include "textchange/footer.html" %}
 
