--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -25,19 +25,19 @@
 
       <h2 id="Create">Logging In</h2>
       <p>In order to login simply click the Facebook login button in the top right corner of the screen. The reason we get you
-        login with Facebook is so you can communicate with other users when you want to trade textbooks.
+        login with Facebook is so you can communicate with other users when you want to buy or sell textbooks.
       </p>
       <a href="#toc">Back to Top</a>
       <h2 id="Search">Searching</h2>
       <p>In order to search for textbooks type keywords into the search box on the home page. You can search for your textbooks by typing your
-        class name, number, textbook name, textbook isbn, or textbook author. Entering multiple words into the search field will refine your search to match
+        class name, class number, textbook name, textbook isbn, textbook author, or any combination of the options listed. Entering multiple words into the search field will refine your search to match
         both inputs. After searching you will be presented with a list of textbooks. Click on the arrow on the right side of one of the a box to go to the
         textbook details page.
       </p>
       <a href="#toc">Back to Top</a>
       <h2 id="PostWish">Creating Postings and Wishes</h2>
       <p>In order to create a posting or add a book to your wishlist you must first search for the textbook and select it from the results page. Afterwards,
-      you will be able to select the "Add a Posting" or "Add to your Wishlist" buttons below the textbooks details. When you click "Add to your Wishlist" the textbook
+      you will be able to select the "Add a Posting" or "Add to Wishlist" buttons below the textbooks details. When you click "Add to Wishlist" the textbook
       will be added to your wishlist immediately. When you click "Add a Posting" you will be brought to page in which you can add a price, condition, and image to
       the posting. The price and condition fields are required. Below the textbook details and action buttons you can find lists of people who are looking for textbook
       and lists of people who are selling the textbook.</p>
@@ -46,7 +46,8 @@
       <p>In order to contact a buyer or seller you must first search for the textbook and select it from the results page.
       At the bottom of the textbook page you can see two lists, "Possible Buyers" and "Possible Sellers". "Possible Buyers" is a list
       of all the people who are currently looking to purchase that textbook. "Possible Sellers" is a list of people who are currently
-      selling that textbook. Click on the arrow button on the right side of one of those entries to go to the contact page.</p>
+      selling that textbook. Click on the arrow button on the right side of one of those entries to go to the contact page. On the contact page
+      you can find a link to their Facebook profile. Message them there.</p>
       <a href="#toc">Back to Top</a>
       <h2 id="Wishlisting">Managing Wishlist and Postings</h2>
       <p>You can manage your postings and wishes by clicking on the "Wishlists and Postings" button on the home page. From there
@@ -64,9 +65,9 @@
         <li type="none">Adding postings or wishes allows other users searching for that textbook to find you,
           that way you don't have to constantly search for buyers and sellers.
           You can let the buyers and sellers find you.</li></br>
-        <li type="circle"><strong>Why are multiple results showing item for the same item?</strong></li></br>
+        <li type="circle"><strong>Why are multiple results showing item for the same textbook?</strong></li></br>
         <li type="none">Multiple results show up for a textbook if the textbook is offered for more than one class.
-        However, no matter what textbook you click on you will see all the postings and wishes for that textbook between
+        However, no matter what class you click on you will see all the postings and wishes for that textbook between
         all of the classes.</li></br>
         <li type="circle"><strong>Why can't I message people on Facebook?</strong></li></br>
         <li type="none">If you do not have the option to message someone on Facebook then their security settings may be too strict.
