WOT verification  Please enter the commit message for your changes. Lines starting

--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -13,6 +13,8 @@
 
   {% load staticfiles %}
 
+  <meta name="wot-verification" content="dbc0d3681956a7bd2371"/>
+
   <!-- Bootstrap core CSS -->
   <link href="{% static "textchange/index.css" %}" rel="stylesheet">
   <link href="{% static "textchange/mycss.css" %}" rel="stylesheet">
