--- a/textchange/templates/textchange/addposting.html
+++ b/textchange/templates/textchange/addposting.html
@@ -11,7 +11,7 @@
         <p>{{ text.textbook_name }}</p>
         <p>{{ text.author }}</p>
         <p>{{ text.isbn }}</p>
-        <form action="{% url 'textchange:addposting' uisbn=text.isbn %}" method="POST" enctype="multipart/form-data"> {% csrf_token %}
+        <form action="{% url 'textchange:addposting' urlstring=urlstring uisbn=text.isbn %}" method="POST" enctype="multipart/form-data"> {% csrf_token %}
           {% for field in form %}
             <span style="color: red;">{{ field.errors }}</span>
             {{ field.label_tag }}
