--- a/textchange/templates/textchange/results.html
+++ b/textchange/templates/textchange/results.html
@@ -25,15 +25,15 @@
         {% if curuser.is_authenticated %}
           {% for items in query %}
           <tr class="borderbot" >
-            <td class="width140"><a href="{% url 'textchange:textbook' uisbn=items.isbn %}" class="blacklink"><div><strong>{{items.class_name}}</strong></br>{{items.author}}</div></a></td>
-            <td  class="width500"><a href="{% url 'textchange:textbook' uisbn=items.isbn %}" class="blacklink"><div>{{items.textbook_name}}</br>{{items.isbn}}</div></a></td>
-            <td  class="width60"><a href = "{% url 'textchange:textbook' uisbn=items.isbn %}"><img src="https://texchangedb.s3.amazonaws.com/textchange/nextarrow.png" class="nextbutton"></a></td>
+            <td class="width140"><a href="{% url 'textchange:textbook' urlstring=urlstring uisbn=items.isbn %}" class="blacklink"><div><strong>{{items.class_name}}</strong></br>{{items.author}}</div></a></td>
+            <td class="width500"><a href="{% url 'textchange:textbook' urlstring=urlstring uisbn=items.isbn %}" class="blacklink"><div>{{items.textbook_name}}</br>{{items.isbn}}</div></a></td>
+            <td class="width60"><a href = "{% url 'textchange:textbook' urlstring=urlstring uisbn=items.isbn %}"><img src="https://texchangedb.s3.amazonaws.com/textchange/nextarrow.png" class="nextbutton"></a></td>
           </tr>
           {% endfor %}
         {% else %}
           {% for items in query %}
           <tr>
-            <tr>
+            <tr class=borderbot>
               <td class="width140"><a href="#" class="blacklink"><div><strong>{{items.class_name}}</strong></br>{{items.author}}</div></a></td>
               <td class="width500"><a href="#" class="blacklink"><div>{{items.textbook_name}}</br>{{items.isbn}}</div></a></td>
               <td class="width60"><a href="#" title="Login Required."><img src="https://texchangedb.s3.amazonaws.com/textchange/nextarrow.png" class="nextbutton" id="resultsbutton"></a></td>
