--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -73,7 +73,10 @@
         <li type="none">If you do not have the option to message someone on Facebook then their security settings may be too strict.
         Make sure to set your settings so that "Anyone" can message you that people are not running into the same problem when messaging you.</li></br>
       </ul>
+      <a href="{% url 'textchange:privacypolicy' %}">Facebook Privacy Policy</a>
+    </br>
       <a href="#toc">Back to Top</a>
+    </br>
 
       {% include "textchange/footer.html" %}
 
