--- a/textchange/templates/textchange/footer.html
+++ b/textchange/templates/textchange/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-  <p>&copy; Brought to you by: Joe Czepil at the University of Victoria 2016</p>
+  <p>&copy; Brought to you by: Joe Czepil at the University of Victoria 2016<span><a href=""><img src="../../static/textchange/facebook.jpeg"></a></span></p>
 </footer>
