--- a/textchange/templates/textchange/footer.html
+++ b/textchange/templates/textchange/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-  <p>&copy; Brought to you by: Joe Czepil at the University of Victoria 2016<span><a href=""><img src="https://texchangedb.s3.amazonaws.com/textchange/facebook.jpeg"></a></span></p>
+  <p>&copy; Brought to you by: Joe Czepil at the University of Victoria 2016<span><a href="https://www.facebook.com/UvicTexchange"><img src="https://texchangedb.s3.amazonaws.com/textchange/facebook.jpeg" height="14" width="51"></a></span></p>
 </footer>
