Move css to class

--- a/textchange/templates/textchange/footer.html
+++ b/textchange/templates/textchange/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-  <p>&copy; Brought to you by: Joe Czepil at the University of Victoria 2016<span style="float:right;"><a href="https://www.facebook.com/UvicTexchange"><img src="https://texchangedb.s3.amazonaws.com/textchange/facebook.png" height="20" width="105"></a></span></p>
+  <p>&copy; Brought to you by: Joe Czepil at the University of Victoria 2016<span class="floatright"><a href="https://www.facebook.com/UvicTexchange"><img src="https://texchangedb.s3.amazonaws.com/textchange/facebook.png" id="fbfooter"></a></span></p>
 </footer>
