--- a/textchange/templates/textchange/404.html
+++ b/textchange/templates/textchange/404.html
@@ -6,8 +6,8 @@
     <div class="container">
       {% include "textchange/navbar.html" %}
       <div class="jumbotron">
-        <h1>Oops! 404</h1>
-        <p>This page does not exist. You can go home here <a href="{% url 'textchange:home' %}">Texchange UVic</a></p>
+        <h1>Oops! 404 Error.</h1>
+        <p>Page not found. You can go home here <a href="{% url 'textchange:index' %}">Texchange UVic</a></p>
         <h3>(╯'□')╯  ┻━┻</h3>
       </div>
 
