Update help page and gitignore

--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -9,10 +9,13 @@
 
       {% include "textchange/navbar.html" %}
 
-      <h1>Application Help</h1>
-      <p>This page gives a basic overview of all the main use cases that can be completed in the application. After reading this
-       you should know how to complete each use case in the most efficient way possible. All of the following use cases start from
-       the homepage. To reach the homepage click "Texchange UVic" in the top left of any page.</p>
+      <h1>Application Summary</h1>
+      <p>Texchange was designed to make searching for used textbooks easy for UVic students. All a user has to do
+      is search for their textbook by ISBN, textbook name, class name, or author. Once they find their textbook they
+      can view current postings and wishes. If they want to show interest in a book they can add their own posting
+      or wish. Users can contact other users through Facebook, links to Facebook profiles can be found on the contact
+      page for postings or wishes.</p>
+      <p>Below you can find more detailed instructions for how to use Texchange.</p>
       <h2 id="toc">Table of Contents</h2>
       <ul>
         <li><a href="#Create">Logging In</a></li>
@@ -31,9 +34,7 @@
       <h2 id="Search">Searching</h2>
       <p>In order to search for textbooks type keywords into the search box on the home page. You can search for your textbooks by typing your
         class name, class number, textbook name, textbook isbn, textbook author, or any combination of the options listed. Entering multiple words into the search field will refine your search to match
-        both inputs. After searching you will be presented with a list of textbooks. Click on the arrow on the right side of one of the a box to go to the
-        textbook details page.
-      </p>
+        both inputs. After searching you will be presented with a list of textbooks. Click on the row of any textbook you wish to view.      </p>
       <a href="#toc">Back to Top</a>
       <h2 id="PostWish">Creating Postings and Wishes</h2>
       <p>In order to create a posting or add a book to your wishlist you must first search for the textbook and select it from the results page. Afterwards,
@@ -46,7 +47,7 @@
       <p>In order to contact a buyer or seller you must first search for the textbook and select it from the results page.
       At the bottom of the textbook page you can see two lists, "Possible Buyers" and "Possible Sellers". "Possible Buyers" is a list
       of all the people who are currently looking to purchase that textbook. "Possible Sellers" is a list of people who are currently
-      selling that textbook. Click on the arrow button on the right side of one of those entries to go to the contact page. On the contact page
+      selling that textbook. Click on any of the rows in those columns to go to the contact page. On the contact page
       you can find a link to their Facebook profile. Message them there.</p>
       <a href="#toc">Back to Top</a>
       <h2 id="Wishlisting">Managing Wishlist and Postings</h2>
