No login needed for contact page

--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -4,15 +4,6 @@
 
   {% include "textchange/head.html" %}
 
-  <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=1611807462418755";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-
   <body>
 
     <div class="container">
@@ -52,14 +43,7 @@
 
     <p>Check out this FREE <a href="http://schedulecourses.com/">Class Scheduling Application</a> for UVic students built by a UVic graduate.</p>
 
-      <p>Like the Facebook page for application updates and share the website with your friends to help grow the community!</p>
-        <span>&nbsp;&nbsp;&nbsp;</span>
-        <div class="fb-share-button" data-href="http://www.texchange.ca" data-layout="button_count"></div><span> Share the website</span>
-        <span>&nbsp;&nbsp;&nbsp;</span>
-        <div class="fb-like" data-href="https://www.facebook.com/UvicTexchange" data-width="180" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
-        <span> Like and share the Facebook page</span>
-
-        <p></br>If you would like to support the developer, donate using the button below.</p>
+        <p>If you would like to support the developer, donate using the button below.</p>
           <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="7LSB63BS4RL62">
@@ -67,7 +51,7 @@
           <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
           </form>
 
-    </br><p>Honourable mentions go out to Konrad Schultz, Daniel Bolink, and Curtis St. Pierre for helping me on some of the problems I ran into.</p>
+        <p>Honourable mentions go out to Konrad Schultz, Daniel Bolink, and Curtis St. Pierre for helping me on some of the problems I ran into.</p>
 
       {% include "textchange/footer.html" %}
 
