--- a/textchange/templates/404.html
+++ b/textchange/templates/404.html
@@ -6,8 +6,8 @@
     <div class="container">
       {% include "textchange/navbar.html" %}
       <div class="jumbotron">
-        <h1>Oops! 404 Error.</h1>
-        <p>Page not found. You can go home here <a href="{% url 'textchange:index' %}">Texchange UVic</a></p>
+        <h1>Oops! 404 Page Not Found.</h1>
+        <p>Sorry about that, this page doesn't exist. Try using the "Texchange Uvic" button to go home.</p>
         <h3>(╯'□')╯  ┻━┻</h3>
       </div>
 
