--- a/textchange/templates/404.html
+++ b/textchange/templates/404.html
@@ -6,9 +6,9 @@
     <div class="container">
       {% include "textchange/navbar.html" %}
       <div class="jumbotron">
-        <h1>Oops! 404 Page Not Found.</h1>
-        <p>Sorry about that, this page doesn't exist. Try using the "Texchange Uvic" button to go home.</p>
+        <h2>404 Page Not Found.</h2>
         <h3>(╯'□')╯  ┻━┻</h3>
+        <p>Sorry about that, try using the "Texchange Uvic" button to go home.</p>
       </div>
 
       {% include "textchange/footer.html" %}
