--- a/textchange/templates/500.html
+++ b/textchange/templates/500.html
@@ -6,9 +6,9 @@
     <div class="container">
       {% include "textchange/navbar.html" %}
       <div class="jumbotron">
-        <h1>Oops! 500 Server Error.</h1>
-        <p>Sorry about that. Try using the "Texchange Uvic" button to go home.</p>
+        <h2>500 Server Error.</h2>
         <h3>(╯'□')╯  ┻━┻</h3>
+        <p>Sorry about that, try using the "Texchange Uvic" button to go home.</p>
       </div>
 
       {% include "textchange/footer.html" %}
