Edit 404 and 500 look

--- a/textchange/templates/500.html
+++ b/textchange/templates/500.html
@@ -6,9 +6,9 @@
     <div class="container">
       {% include "textchange/navbar.html" %}
       <div class="jumbotron">
-        <h2>500 Server Error.</h2>
-        <h3>(╯'□')╯  ┻━┻</h3>
-        <p>Sorry about that, try using the "Texchange Uvic" button to go home.</p>
+        <h1>500 Server Error.</h1>
+        <h2>(╯'□')╯  ┻━┻</h2>
+        <p>Sorry about that, click <a href="www.texchange.ca">here</a> to go home.</p>
       </div>
 
       {% include "textchange/footer.html" %}
