edit 404 and 500 style

--- a/textchange/templates/500.html
+++ b/textchange/templates/500.html
@@ -8,7 +8,8 @@
       <div class="jumbotron">
         <h1>500 Server Error.</h1>
         <h2>(╯'□')╯  ┻━┻</h2>
-        <p>Sorry about that, click <a href="www.texchange.ca">here</a> to go home.</p>
+      </br>
+        <p>Sorry about that, click <a href="{% url 'textchange:index' %}">here</a> to go home.</p>
       </div>
 
       {% include "textchange/footer.html" %}
