Features in progress

--- a/textchange/templates/textchange/contactpost.html
+++ b/textchange/templates/textchange/contactpost.html
@@ -25,6 +25,7 @@
 
       <div class="col-lg-6">
           <img src="{{ posting.image.url }}" id="postimage">
+          {{posting.image.url}}
       </div>
     </div>
 
